--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -23,7 +23,13 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: start;
+    padding-left: 2rem;
+    overflow-wrap: break-word;
+
+    @media (min-width: 768px) {
+        align-items: center;
+    }
 }
 
 h4, h1, h2 {
@@ -40,6 +46,11 @@ h2,h3,h4 {
 
 .hero-secondary-text {
     color: var(--text-secondary);
+    max-width: 80%;
+
+    @media (min-width: 768px) {
+        max-width: 100%;
+    }
 }
 
 .hero-greeting {
